<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sib3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="137dp"
        android:layout_height="135dp"
        android:contentDescription="@string/search_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sib3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/find_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/search_icon"
        app:layout_constraintStart_toStartOf="@+id/search_icon"
        app:layout_constraintTop_toBottomOf="@+id/search_icon" />

    <ImageView
        android:id="@+id/sib3"
        android:layout_width="348dp"
        android:layout_height="75dp"
        android:contentDescription="@string/sib3xdicoding_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_item_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_item_user"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@drawable/sib3" />


</androidx.constraintlayout.widget.ConstraintLayout>